# CrazePy

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  docs.md  main.cpp  type_names.h
error_handeling/: error_handeling.cpp  error_handeling.h
lexer/: lexer.cpp  lexer.h
parser/: parser.cpp  parser.h
